# Source-Code_ShaderX_GPU-Pro_GPU-Zen

./: README.md
ShaderX2-1/03 - Michal Valient/: readme.txt
ShaderX2-1/03 - Michal Valient/Include/: BaseClass.h  DG-DirectGraphicsDeviceInfo.h  ENG-Base3DObject.h  ENG-BaseResource.h  ENG-BaseTexture.h  ENG-Engine.h  ENG-EngineDefaults.h  ENG-FrameRate.h  ENG-Frustum.h  ENG-Mesh.h  ENG-MeshD3F.h  ENG-MeshMS3D.h  ENG-MeshManager.h  ENG-MeshPart.h  ENG-RenderGroup.h  ENG-RenderSettings.h  ENG-ResourceManager.h  ENG-SimpleScene.h  ENG-TestCube.h  ENG-Texture2D.h  ENG-TextureCube.h  ENG-TextureManager.h  ENG-Types.h  EngineVersion.h  FIL-BaseDirectory.h  FIL-DirTreeDirectory.h  FIL-FileManager.h  Global.h  MGR-BaseManager.h  MGR-DirectGraphicsManager.h  MGR-ErrorManager.h  MGR-MemoryManager.h  PRIVATE-MemMGR.h  RESOURCE.H  RootClass.h  SC-CustomHashTable.h  SC-DynamicArray.h  SC-HashTable.h  SC-HashTable2.h  SC-IniFile.h  (+13 more)
ShaderX2-1/03 - Michal Valient/Source/: BaseClass.cpp  RESOURCE.H  RootClass.cpp
ShaderX2-1/04 - Markus Nubel/: readme.txt
ShaderX2-1/04 - Markus Nubel/Example1/: ExampleOne.cpp  ExampleOne.dsp  ExampleOne.h  LinearFog.vsh
ShaderX2-1/04 - Markus Nubel/Example2/: CMakeLists.txt  ExampleTwo.cpp  ExampleTwo.dsp  ExampleTwo.dsw  ExampleTwo.h  ExpFog.psh  ExpFog.vsh
ShaderX2-1/04 - Markus Nubel/Example3/: ExampleThree.cpp  ExampleThree.dsp  ExampleThree.dsw  ExampleThree.h  Exp2Fog.psh  Exp2Fog.vsh
ShaderX2-1/04 - Markus Nubel/Example4/: ExampleFour.cpp  ExampleFour.dsp  ExampleFour.dsw  ExampleFour.h  LayeredFog.vsh
ShaderX2-1/04 - Markus Nubel/Example5/: AnimatedFog.vsh  ExampleFive.cpp  ExampleFive.dsp  ExampleFive.dsw  ExampleFive.h
ShaderX2-1/04 - Markus Nubel/ExamplesAll/: ExamplesAll.dsp  ExamplesAll.dsw
ShaderX2-1/05 - Michal Valient/: readme.txt
ShaderX2-1/07 - Natalya Tatarchuk/: No example.txt
ShaderX2-2/Section 2 - Rendering Techniques/: remarks.txt
(+1762 files in other folders)
